recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:17: error: not found: value pentatKoch
		pentatKoch(levels-1, length)
                ^